added a few changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="navbar-nav ml-auto">
                     <a href="#home" class="nav-item nav-link active">Home</a>
                     <a href="#about" class="nav-item nav-link">About</a>
-                    <a href="#service" class="nav-item nav-link">Service</a>
+                    <a href="#service" class="nav-item nav-link">Services</a>
                     <a href="#experience" class="nav-item nav-link">Experience</a>
                     <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
                     <a href="#contact" class="nav-item nav-link">Contact</a>
@@ -60,7 +60,7 @@
                             <p>Hello, Welcome!</p>
                             <h1>I'm Michael Nwachukwu</h1>
                             <h2></h2>
-                            <div class="typed-text">ASP.NET Core Developer</div>
+                            <div class="typed-text">Web Design/Development and IT Support</div>
                         </div>
                         <div class="hero-btn">
                             <a class="btn" href="https://github.com/numichael">GitHub</a>
@@ -98,30 +98,27 @@
                     <div class="about-content">
                         <div class="section-header text-left">
                             <p>About Me</p>
-                            <h2>Web Developer</h2>
+                            <h2>Web Desinger/Developer</h2>
                         </div>
                         <div class="about-text">
                             <p>Hi, i'm Michael Nwachukwu,</p>
-                            <p>As a web developer, I love to build solutions that simplifies business processes and improve people's lifestyle. With skills in Asp.NET Core, I am able to build web APIs and web applications. </p>
+                            <p>As a web designer/developer, I love to build solutions that simplifies business processes and improve people's lifestyle. With skills in Asp.NET Core, I am able to build web APIs and web applications. </p>
                         </div>
                         <div class="skills">
                             <h2>Skills</h2>
-                            <h5>Coding Skills</h5>
+                            <h5>Web Skills</h5>
                             <ul>
-                                <li>C#, HTML, CSS, JavaScript</li>
+                                <li>React.js, HTML, CSS, JavaScript, Bootstrap</li>
 
                             </ul>
-                            <h5>Libraries & Frameworks</h5>
-                            <ul>
-                                <li>ASP.NET Core, MVC, Bootstrap</li>
-                            </ul>
+
                             <h5>Tools & Platforms</h5>
                             <ul>
                                 <li>VS Code, Visual Studio, Git, GitHub, Slack, WordPress CMS</li>
                                 <li>Google, Microsoft Office, Zoom.</li>
 
                             </ul>
-                            <h5>Design</h5>
+                            <h5>Graphics Design</h5>
                             <ul>
                                 <li>Adobe Illustrator & FIGMA</li>
                             </ul>
@@ -149,9 +146,9 @@
                             <i class="fa fa-lightbulb"></i>
                         </div>
                         <div class="service-text">
-                            <h3>Web Development</h3>
+                            <h3>Web Design/Development</h3>
                             <p>
-                                I specialize in building scalable web applications and services that simplifies business processes, and improves return on investment.
+                                I specialize in building scalable web solutions that simplifies business processes, and improves return on investment.
                             </p>
                         </div>
                     </div>
@@ -162,9 +159,9 @@
                             <i class="fa fa-laptop-code"></i>
                         </div>
                         <div class="service-text">
-                            <h3>Tech Education</h3>
+                            <h3>IT Support Services</h3>
                             <p>
-                                I focus on creating inclusive learning environments and instructor training, to help develop globally relevant skills in both children and adults.
+                                I provide a range of digital support services such as virtual assistance, system solution support etc, to individuals and corporate organizations.
                             </p>
                         </div>
                     </div>
@@ -180,27 +177,30 @@
     <div class="experience" id="experience">
         <div class="container">
             <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                <p>My Resume</p>
+
                 <h2>Work Experience</h2>
             </header>
             <div class="timeline">
                 <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                     <div class="timeline-text">
                         <div class="timeline-date">2022</div>
-                        <h2>Web Designer (Volunteer)</h2>
+                        <h2>Web Designer </h2>
                         <h4>The Autism Awareness Foundation, Nigeria.</h4>
                         <p>
                             Designed a WordPress based website for the foundation.
+                        </p>
+                        <p>
+                            Project Status: in development.
                         </p>
                     </div>
                 </div>
                 <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                     <div class="timeline-text">
                         <div class="timeline-date">2022</div>
-                        <h2>Web Designer (Contract)</h2>
+                        <h2>Web Designer </h2>
                         <h4>TheraConnect Nigeria Limited.</h4>
                         <p>
-                            Designed and built an appointment booking website for the company.
+                            Designed and built an appointment booking website for the organization.
                         </p>
                     </div>
                 </div>
