--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                             <input type="email" class="form-control px-3 py-4 text-white" placeholder="Your Email">
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control px-3 py-4 text-white" placeholder="Your Phone">
+                            <input type="number" class="form-control px-3 py-4 text-white" placeholder="Your Phone">
                         </div>
                         <div class="form-group mb-5">
                             <textarea class="form-control px-3 py-4 text-white" cols="30" rows="10" placeholder="Write a Message"></textarea>
