--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Michael - Web designer | Web Developer | Trainer</title>
+    <title>Michael - Technical Support Specialist | Web Expert | Software Developer </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/animate.css">
@@ -47,7 +47,7 @@
                 <div class="col-md-10 text-center pt-5">
 
                     <h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Michael Nwachukwu</strong></h1>
-                    <h2><strong>I create beautiful and functional websites</strong> </h2>
+                    <h2><strong>Technical Support Expert | Software Engineer | Tech Educator</strong> </h2>
 
                 </div>
             </div>
@@ -59,7 +59,7 @@
         <div class="container">
             <div class="row">
                 <div class="section-heading text-center col-md-12">
-                    <h2>Featured <strong>Projects</strong></h2>
+                    <h2>Featured <strong>Software Projects</strong></h2>
                 </div>
             </div>
 
@@ -124,8 +124,8 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="resume-item mb-4">
                         <span class="date"><span class="icon-calendar"></span> August 2022 - Present</span>
-                        <h3>BSc. Computer Science</h3>
-                        <span class="school">National Open University of Nigeria (in view)</span>
+                        <h3>BSc. Business & IT</h3>
+                        <span class="school">IU International University of Applied Science, Germany (in view)</span>
                     </div>
 
                     <div class="resume-item mb-4">
@@ -153,6 +153,12 @@
                     <h2 class="mb-5">Experience</h2>
 
                     <div class="resume-item mb-4">
+                        <span class="date"><span class="icon-calendar"></span> February 2023 - Present</span>
+                        <h3>Technical Support Expert</h3>
+                        <span class="school">Jason's Tendercare School, Lagos</span>
+                    </div>
+
+                    <div class="resume-item mb-4">
                         <span class="date"><span class="icon-calendar"></span> August 2022 - November 2022</span>
                         <h3>Web Development Intern</h3>
                         <span class="school">Harmonics Technology</span>
@@ -160,8 +166,8 @@
 
                     <div class="resume-item mb-4">
                         <span class="date"><span class="icon-calendar"></span> May 2022 - August 2022</span>
-                        <h3>Web Design Intern</h3>
-                        <span class="school">GIZ, German Corporation Lagos</span>
+                        <h3>Technical Support Expert</h3>
+                        <span class="school">GIZ, German Corporation, Lagos</span>
                     </div>
 
 
@@ -267,8 +273,8 @@
                         <span class="icon">
 							<span class="icon-browser2"></span>
                         </span>
-                        <h3 class="mb-4">Web Design</h3>
-                        <p>I love to create visually stunning and functional websites that will help your business stand out online.</p>
+                        <h3 class="mb-4">Technical Support</h3>
+                        <p>I provide 24/7 technical support services for Computer Systems, CCTV, DSTV and general IT gadgets. .</p>
 
                     </div>
                 </div>
@@ -278,7 +284,7 @@
 							<span class="icon-code"></span>
                         </span>
                         <h3 class="mb-4">Web Development</h3>
-                        <p>I work closely with you to understand your needs and goals, and use latest development technologies and techniques to build applications that meets your business requirements.</p>
+                        <p>I use latest development technologies and techniques to build applications that meets your business requirements.</p>
 
                     </div>
                 </div>
@@ -288,7 +294,7 @@
 							<span class="icon-presentation"></span>
                         </span>
                         <h3 class="mb-4">IT Training</h3>
-                        <p> I have trained over 400 learners in core IT skills such as Computer Appreciation, Graphics Design and Web Development. </p>
+                        <p> I have trained over 400 learners in core IT skills such as Computer Appreciation, Graphics Design and Coding. </p>
 
                     </div>
                 </div>
