--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="resume-item mb-4">
                         <span class="date"><span class="icon-calendar"></span> August 2022 - Present</span>
-                        <h3>BSc. Business & IT</h3>
-                        <span class="school">IU International University of Applied Science, Germany (in view)</span>
+                        <h3>BSc. Business & IT </h3> (in view)
+                        <span class="school">IU International University of Applied Sciences, Germany</span>
                     </div>
 
                     <div class="resume-item mb-4">
